objects/Ticket_Mapswith_Survey__c.object
<CustomObject>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Questions__c</fullName>
        <label>Survey Questions</label>
        <referenceTo>Survey_Questions__c</referenceTo>
        <relationshipLabel>Ticket_Mapswith_Survey</relationshipLabel>
        <relationshipName>Ticket_Mapswith_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TicketTypes__c</fullName>
        <label>TicketTypes</label>
        <referenceTo>TicketTypes__c</referenceTo>
        <relationshipLabel>Ticket_Mapswith_Survey</relationshipLabel>
        <relationshipName>Ticket_Mapswith_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ticket_Mapswith_Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TicketTypes__c</columns>
        <columns>Survey_Questions__c</columns>
        <columns>NAME</columns>
        <columns>order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Mark</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QMap-{00}</displayFormat>
        <label>Ticket_Mapswith_Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket_Mapswith_Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>